tests/test_proof/bad/output/dates_get_year-empty.catala_en.Proof
[ERROR] [A.y] This variable might return an empty error:
 --> tests/test_proof/bad/dates_get_year-empty.catala_en
  | 
6 |   context y content boolean
  |           ^
  + Test
The solver generated the following counterexample to explain the faulty behavior:
--> counterexamples disabled
[RESULT] [A.y] No two exceptions to ever overlap for this variable
[RESULT] [A.x] This variable never returns an empty error
[RESULT] [A.x] No two exceptions to ever overlap for this variable
